--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package-a",
-  "version": "2.2.1",
+  "name": "package-wangjiasheng",
+  "version": "2.3.0",
   "description": "",
   "main": "index.js",
   "type": "module",
